Version NEXT
	display port number if we can't listen on it
	minor whitespace cleanup
	do not fail hard if we can't write to pid file and running from
	  inetd

Version 2.8.1b29 - 24 Aug 2019
        added scons command line argument without-fspscan=yes for building
	  without fspscan
	do not install shell scripts if no clients are installed
	support for user supplied examplesdir
	display pidfile name in case we can not write to it
	add error exit 8 if we can't write pid file
	RPM packaging of fspd
	packaging files added to source code repo
Version 2.8.1b28 - 16 Aug 2019
	Pull scons site Python 3 fixed from fsplib and fspclient projects
	More scons with python 3 build fixes
	contrib/fspscan fdclose() name conflict
	Gentoo packaging of fspd
Version 2.8.1b27 - 9 Sep 2014
	fhostcmd: Fixed output of FSP_TRACE variable for Bourne style shells
	correctly initialize to zero client packet sent statistic counter
	note default timeout values in fsp_env man page
	setting environment value FSP_TIMEOUT to <=0 uses 4byte maxint value
	note default fspd max packet size in fsp_env man page
	fix build on systems with utmpx.h API (FreeBSD 9)
	fspscan: do not shadow host variable
	fspscan: fix clang warning about empty for cycle body by placing
	  semicolon on separate line
	FAQ: Cleaned lot of SGML markup errors
	Do not use sgmlformat, call jade directly
	correctly zero entire sockaddr_in structure during name resolving,
	  error found by Clang.
	allow docbook dsssl stylesheets to be specified at scons command line
	always validate path in SETPRO and MKDIR even if packet is resent and
	  no action will be taken. This is needed to avoid uninitialised
	  pointer access during reply. Found by Clang.

Version 2.8.1b26 - 1 Oct 2009
	fver now reports if server can process extra data in input packets.
	  fspclient did that for a long time. This field is used by fspd
	  2.8.1 beta 21 or newer.
	Server version string sent as response to CC_VERSION command have