@@ -4,7 +4,8 @@ env.Install(dir=DOCDIR,source=Split("""BETA.README COPYRIGHT ChangeLog
 FILES INFO INSTALL MACHINES TODO
 """))
 
-env.Install(dir=EXAMPLESDIR,source="fspd.conf")
+if SERVER:
+  env.Install(dir=EXAMPLESDIR,source="fspd.conf")
 if CLIENTS:
   env.Install(dir=EXAMPLESDIR,source=Split("setup.sh setup.csh"))
 env.Alias("install", EXAMPLESDIR)
