@@ -59,6 +59,7 @@ from docdir import checkForUserDocdir
 from mandir import autodetectMandir
 from examplesdir import checkForUserExamplesdir
 from clients import checkForBuildingClients
+from server import checkForBuildingServer
 from fspscan import checkForBuildingFspscan
 from sysconfdir import checkForUserSysconfdir
 from largefiles import enableLargeFiles
@@ -66,7 +67,7 @@ from jade import checkDSSSLProcessor
 from dsssl import findDocbookStylesheets
 
 conf = Configure(env,{'checkForCCOption':checkForCCOption,
-                      'MAINTAINER_MODE':checkForMaintainerMode,
+		      'MAINTAINER_MODE':checkForMaintainerMode,
 		      'checkForLockPrefix':checkForLockPrefix,
 		      'checkPrefix':checkForUserPrefix,
 		      'checkForLockingType':checkForLockingType,
@@ -80,6 +81,7 @@ conf = Configure(env,{'checkForCCOption':checkForCCOption,
 		      'autodetectMandir':autodetectMandir,
 		      'checkForUserSysconfdir':checkForUserSysconfdir,
 		      'checkForBuildingClients':checkForBuildingClients,
+		      'checkForBuildingServer':checkForBuildingServer,
 		      'checkForBuildingFspscan':checkForBuildingFspscan,
 		      'checkDSSSLProcessor':checkDSSSLProcessor,
 		      'findDocbookStylesheets':findDocbookStylesheets
@@ -160,11 +162,12 @@ if EFENCE == True:
     EFENCE=conf.CheckLib("efence","EF_Abort")
 conf.checkForLamerPack()
 CLIENTS=conf.checkForBuildingClients()
+SERVER=conf.checkForBuildingServer()
 FSPSCAN=conf.checkForBuildingFspscan()
 conf.checkForClientTimeout()
 conf.Finish()
 
 env.Append(CPPFLAGS = "-DPACKAGE_VERSION=\\\""+VERSION+"\\\"")
 # process build rules
-Export( Split("env PREFIX MANDIR DOCDIR EXAMPLESDIR CLIENTS FSPSCAN JADE DSSSL"))
+Export( Split("env PREFIX MANDIR DOCDIR EXAMPLESDIR CLIENTS SERVER FSPSCAN JADE DSSSL"))
 env.SConscript(dirs=Split("doc . bsd_src common server client clients contrib tests man"))
