@@ -1,9 +1,9 @@
-Import(Split("env PREFIX common bsdfsp"))
+Import(Split("env PREFIX common bsdfsp SERVER"))
 
-fspd=env.Program(target = 'fspd', source = Split('''
+if SERVER:
+  fspd=env.Program(target = 'fspd', source = Split('''
 acl.c       file.c      info.c      main.c      random.c
 conf.c      filecache.c iprange.c   path.c      server.c
 fifocache.c host.c      log.c       pidfile.c
 ''') + common  + bsdfsp)
-
-env.Install(dir = PREFIX+'/bin', source = fspd)
+  env.Install(dir = PREFIX+'/bin', source = fspd)
